--- a/src/index.html
+++ b/src/index.html
@@ -22,11 +22,6 @@
                         <span class="header__separator">/</span>
                         <span class="header__collection">{{ collection.name }}</span>
                     </span>
-
-                    <span v-if="user">
-                        <span class="header__separator">::</span>
-                        <span class="header__user">{{ user.name }}</span>
-                    </span>
                 </h2>
 
                 <div class="header-menu">
@@ -34,6 +29,11 @@
                             class="el-icon-plus"></i></router-link>
                     <router-link :to="{ name: 'collections' }" v-if="user"><i class="el-icon-document-copy"></i>
                     </router-link>
+
+                    <div v-if="user">
+                        <el-avatar :size="16" :src="avatarUrl"></el-avatar>
+                        {{ firstName }}
+                    </div>
                 </div>
             </el-header>
             <el-main class="content" v-loading="loading">
